k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-demo
  name: quarkus-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-demo
  template:
    metadata:
      labels:
        app: quarkus-demo
    spec:
      containers:
        - image: quay.io/tshen/quarkus-demo
          imagePullPolicy: Always
          name: quarkus-demo
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: tshen-quay-robot-secret
