k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-demo
  name: quarkus-service
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: quarkus-demo
