k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-demo
  name: quarkus-route
  namespace: tay-test
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-service
    weight: 100
  wildcardPolicy: None
